# django-generic-search

./: .gitignore  LICENSE  MANIFEST.in  README.rst  manage.py  requirements.txt  setup.cfg
generic_search/: apps.py  urls.py  views.py
generic_search/management/commands/: cleancrawlresults.py  crawlsite.py  generateindex.py  indexsite.py  pagerank.py  startspider.py
generic_search/searchbot/: __init__.py  scrapy.cfg
generic_search/searchbot/searchbot/: items.py  middlewares.py  pipelines.py  settings.py
generic_search/searchbot/searchbot/spiders/: gammaspider.py
generic_search/searchbot/utils/: __init__.py  base.py  pagerank.py
generic_search/templates/generic_search/: index.html
generic_search/utils/: __init__.py  utils.py
tests/: settings.py
